hphp/test/zend/bad/Zend/tests/bug63111.php.expectf
Strict Standards: Static function Foo::bar() should not be abstract in %sbug63111.php on line 3
bool(false)
bool(false)
bool(false)
bool(false)
bool(true)
bool(true)
ok

Fatal error: %s